# listed-backend

./: .env.development  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 4974e04903a0_add_background_image_url_to_lists.py  887c171928c3_add_first_last_display_name_to_users.py  a1b2c3d4e5f6_create_lists_list_entries_entry_media.py  b2c3d4e5f6a7_alter_emoji_and_entry_type_lengths.py  c5d6e7f8a9b0_split_entries_into_entry_visits.py  d7e8f9a0b1c2_rename_entry_visits_to_entry_logs.py  e418ebcb9ae5_create_users_table.py
listed_backend/: config.py  database.py  main.py  supabase_client.py
listed_backend/dependencies/: auth.py
listed_backend/models/: list.py  list_entry.py  user.py
listed_backend/routers/: auth.py  lists.py
listed_backend/schemas/: auth.py  list.py
listed_backend/services/: auth.py  lists.py
supabase/: config.toml
